--- a/kondomeeneum/package.json
+++ b/kondomeeneum/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "next": "^13.5.7",
+    "openai": "^4.70.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "^13.5.7"
   }
 }
